--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
 				"jquery": "^3.7.1",
 				"nuxt-mail": "^4.0.1",
 				"nuxt-swiper": "^1.2.2",
+				"pinia": "^2.1.7",
 				"vue": "^3.4.19",
 				"vue-i18n": "^9.2.2",
 				"vue-router": "^4.2.5"
 		},
 		"resolutions": {
-			"string-width": "4.2.3"
-		 }
+				"string-width": "4.2.3"
+		}
 }
