--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
 				"chalk": "5.3.0",
 				"ethers": "5.7.2",
 				"jquery": "^3.7.1",
+				"marked": "^12.0.2",
 				"nuxt-mail": "^4.0.1",
 				"nuxt-swiper": "^1.2.2",
-				"uuid": "9.0.0",
 				"pinia": "^2.1.7",
+				"uuid": "9.0.0",
 				"vue": "^3.4.19",
 				"vue-i18n": "^9.2.2",
 				"vue-router": "^4.2.5",
