--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 				"@types/node": "^18",
 				"bootstrap": "^5.2.3",
 				"nuxt": "^3.5.1",
+				"nuxt-icon": "^0.6.10",
 				"nuxt-svgo": "^3.5.6",
 				"sass": "^1.59.2",
 				"sass-loader": "^13.2.0"
@@ -23,6 +24,8 @@
 				"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
 				"@nuxtjs/i18n": "^8.0.0-beta.12",
 				"@pinia/nuxt": "^0.4.11",
+				"@thirdweb-dev/sdk": "^4.0.92",
+				"@thirdweb-dev/wallets": "^2.5.32",
 				"@vuelidate/core": "^2.0.3",
 				"@vuelidate/validators": "^2.0.4",
 				"aos": "^2.3.4",
@@ -31,12 +34,12 @@
 				"jquery": "^3.7.1",
 				"nuxt-mail": "^4.0.1",
 				"nuxt-swiper": "^1.2.2",
-				"uuid": "9.0.0",
 				"pinia": "^2.1.7",
+				"uuid": "9.0.0",
 				"vue": "^3.4.19",
 				"vue-i18n": "^9.2.2",
 				"vue-router": "^4.2.5",
-				"vue-toast-notification": "3.0.0"
+				"vue-toast-notification": "^3.1.2"
 		},
 		"resolutions": {
 				"string-width": "4.2.3"
