--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
 				"@types/markdown-it": "^14.1.1",
 				"@vuelidate/core": "^2.0.3",
 				"@vuelidate/validators": "^2.0.4",
-				"animate.css": "^4.1.1",
 				"@vueuse/core": "^10.11.0",
+				"animate.css": "^4.1.1",
 				"aos": "^2.3.4",
 				"chalk": "5.3.0",
+				"click-outside-vue3": "^4.0.1",
 				"ethers": "5.7.2",
 				"jquery": "^3.7.1",
 				"markdown-it": "^14.1.0",
