--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		},
 		"dependencies": {
 				"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+				"@metamask/sdk": "^0.27.0",
 				"@nuxtjs/i18n": "^8.0.0-beta.12",
 				"@pinia/nuxt": "^0.4.11",
 				"@thirdweb-dev/sdk": "^4.0.92",
