--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 				"@vueuse/core": "^10.11.0",
 				"animate.css": "^4.1.1",
 				"aos": "^2.3.4",
+				"axios": "^1.7.7",
 				"chalk": "5.3.0",
 				"click-outside-vue3": "^4.0.1",
 				"ethers": "5.7.2",
