--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 				"@types/node": "^18",
 				"bootstrap": "^5.2.3",
 				"nuxt": "^3.5.1",
+				"nuxt-gtag": "^3.0.1",
 				"nuxt-svgo": "^3.5.6",
 				"sass": "^1.59.2",
 				"sass-loader": "^13.2.0"
@@ -53,5 +54,6 @@
 		},
 		"resolutions": {
 				"string-width": "4.2.3"
-		}
+		},
+		"packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
