--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 				"@vuelidate/core": "^2.0.3",
 				"@vuelidate/validators": "^2.0.4",
 				"@vueuse/core": "^10.11.0",
+				"@walletconnect/client": "^1.8.0",
+				"@walletconnect/qrcode-modal": "^1.8.0",
 				"animate.css": "^4.1.1",
 				"aos": "^2.3.4",
 				"axios": "^1.7.7",
