--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
 				"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
 				"@nuxtjs/i18n": "^8.0.0-beta.12",
 				"@pinia/nuxt": "^0.4.11",
+				"@reown/appkit": "^1.5.1",
+				"@reown/appkit-adapter-wagmi": "^1.5.1",
+				"@tanstack/vue-query": "^5.60.6",
 				"@thirdweb-dev/sdk": "^4.0.92",
 				"@thirdweb-dev/wallets": "^2.5.32",
 				"@types/markdown-it": "^14.1.1",
 				"@vuelidate/core": "^2.0.3",
 				"@vuelidate/validators": "^2.0.4",
 				"@vueuse/core": "^10.11.0",
+				"@wagmi/core": "^2.14.6",
+				"@wagmi/vue": "^0.0.65",
 				"@walletconnect/client": "^1.8.0",
 				"@walletconnect/qrcode-modal": "^1.8.0",
 				"animate.css": "^4.1.1",
@@ -46,7 +51,9 @@
 				"nuxt-mail": "^4.0.1",
 				"nuxt-swiper": "^1.2.2",
 				"pinia": "^2.1.7",
+				"thirdweb": "^5.69.0",
 				"uuid": "9.0.0",
+				"viem": "^2.21.49",
 				"vue": "^3.4.19",
 				"vue-boring-avatars": "^1.4.0",
 				"vue-i18n": "^9.2.2",
