--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 				"chalk": "5.3.0",
 				"click-outside-vue3": "^4.0.1",
 				"ethers": "5.7.2",
+				"highlight.js": "^11.10.0",
 				"jquery": "^3.7.1",
 				"markdown-it": "^14.1.0",
 				"marked": "^12.0.2",
