--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"dependencies": {
 				"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
 				"@nuxtjs/i18n": "^8.0.0-beta.12",
+				"@nuxtjs/robots": "^5.0.1",
 				"@pinia/nuxt": "^0.4.11",
 				"@reown/appkit": "^1.5.1",
 				"@reown/appkit-adapter-wagmi": "^1.5.1",
