--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		},
 		"dependencies": {
 				"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+				"@metamask/sdk": "^0.31.5",
 				"@nuxtjs/i18n": "^8.0.0-beta.12",
 				"@nuxtjs/robots": "^5.0.1",
 				"@pinia/nuxt": "^0.4.11",
